feat blocks and chat are working, bug : logs of diffrents processes are mixing observations

--- a/config.json
+++ b/config.json
@@ -116,7 +116,7 @@
             "txt" : 1,
             "json" : 1,
             "console" : 1,
-            "path" : "./logs"
+            "path" : "./corpus"
         }
     }
 }
