--- a/config.json
+++ b/config.json
@@ -7,15 +7,15 @@
         "ms_per_tick" : 50,
         "time_of_day" : 9000,
         "allow_time_passage" : 0,
-        "flat_world_generator_str" : "3;7,220*1,5*3,2;3;,biome_1",
+        "flat_world_generator_str" : "3;7,220*1,3*3,2,3,166; ,biome_1",
         "time_limit" : 300000,
         "quit_from_time_up_description" : "Time up",
         "force_reset" : 1,
-        "area_side_size" : 21,
+        "area_side_size" : 11,
         "weather" : "clear"
     },
     "agents" : {
-        "num_distant_agents" : 0,
+        "num_distant_agents" : 1,
         "builder_1" : {
             "name" : "builder",
             "placement" : "random"
