fix: unicode, feat : power option in config

--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "agents" : {
         "num_distant_agents" : 0,
         "allow_architect_building" : 0,
+        "power" : 110,
         "builder_1" : {
             "name" : "builder",
             "placement" : "random"
